--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,8 @@
    sorted by the dependencies. Also, the first two lines of the file are required by Jekyll.
  */
 
+@import "custom";
+
 @import 
     "vendor/breakpoint/breakpoint",
 
