--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -32,4 +32,52 @@
     margin-right: 1em;
     margin-bottom: 1em;
   }
+}
+
+/* 增加导航栏菜单项间距 */
+.greedy-nav .visible-links {
+  li {
+    margin-right: 2em; /* 增加菜单项之间的间距 */
+    
+    &:last-child {
+      margin-right: 0; /* 最后一个菜单项不需要右边距 */
+    }
+  }
+}
+
+/* 可选：增加导航栏菜单项字体大小 */
+.greedy-nav a {
+  font-size: 1.1em; /* 稍微增大字体 */
+}
+
+/* 增加 about 页面宽度 */
+.layout--home,
+.layout--single {
+  .page {
+    width: 100%;
+    padding-right: 0;
+  }
+  
+  .page__inner-wrap {
+    max-width: 1200px;  /* 增加最大宽度 */
+    margin: 0 auto;
+  }
+  
+  .page__content {
+    width: 100%;
+    
+    p, div, ul, ol, table {
+      max-width: none;
+    }
+  }
+}
+
+/* 调整内容区域的宽度 */
+.page__content {
+  width: 100%;
+  float: none;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 } 
