recover page scss

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -10,9 +10,10 @@
     padding-right: 1em;
     animation: intro 0.3s both;
     animation-delay: 0.35s;
+    max-width: 1600px !important;
   
     @include breakpoint($x-large) {
-      max-width: $x-large;
+      max-width: 1600px;
     }
   }
   
@@ -22,10 +23,15 @@
       @include prefix(0.5 of 12);
       @include suffix(2 of 12);
     }
+    width: 100% !important;
+    float: none !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding-right: 0 !important;
   
     .page__inner-wrap {
       @include full();
-      max-width: 100%;
+      max-width: 100% !important;
   
       .page__content,
       .page__meta,
